// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Patterns/Combobox Input As Form Item 1`] = `
<div
  style="height:700px"
>
  
    
  <div
    class="fd-form-item"
  >
    
        
    <label
      class="fd-form-label"
      for="comboboxAsFormItem"
    >
      Combobox as a form item
    </label>
    
        
    <div
      class="fd-popover"
    >
      
            
      <div
        aria-controls="F4GcX349"
        aria-expanded="false"
        aria-haspopup="true"
        class="fd-popover__control"
      >
        
                
        <div
          class="fd-input-group fd-input-group--control"
        >
          
                    
          <input
            class="fd-input fd-input-group__input"
            id="comboboxAsFormItem"
            placeholder="Select Fruit"
            type="text"
          />
          
                    
          <span
            class="fd-input-group__addon fd-input-group__addon--button"
          >
            
                        
            <button
              aria-controls="F4GcX349"
              aria-expanded="true"
              aria-haspopup="true"
              aria-label="show/hide fruit options"
              class="fd-input-group__button fd-button fd-button--transparent"
            >
              
                            
              <i
                class="sap-icon--navigation-down-arrow"
              />
            </button>
            
                    
          </span>
          
                
        </div>
        
            
      </div>
      
            
      <div
        aria-hidden="false"
        class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
        id="F4GcX349"
      >
        
                
        <div
          class="fd-popover__wrapper docs-max-height"
        >
          
                    
          <ul
            aria-label="fruit options"
            class="fd-list fd-list--dropdown"
            role="listbox"
          >
            
                        
            <li
              class="fd-list__item is-selected"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                
                                
                <span
                  class="fd-list__bold"
                >
                  App
                </span>
                le
                            
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Orange
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Banana
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Kiwi
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Nectarine
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Apricots
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Peache
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Plum
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Mango
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Strawberry
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Blueberry
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Watermelon
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Rockmelon
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Honeydew
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Apple
              </span>
              
                        
            </li>
            
                    
          </ul>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Patterns/Combobox Input Cozy And Compact 1`] = `
<div
  style="display:flex;justify-content:space-around;height:700px"
>
  
    
  <div
    style="display:flex;flex-direction:column"
  >
    
        
    <label
      class="fd-form-label"
      for="cozyCombobox"
    >
      Combobox Cozy Mode
    </label>
    
        
    <div
      class="fd-popover"
    >
      
            
      <div
        aria-controls="F4GcX348"
        aria-expanded="false"
        aria-haspopup="true"
        class="fd-popover__control"
      >
        
                
        <div
          class="fd-input-group fd-input-group--control"
        >
          
                    
          <input
            class="fd-input fd-input-group__input"
            id="cozyCombobox"
            placeholder="Select Fruit"
            type="text"
          />
          
                    
          <span
            class="fd-input-group__addon fd-input-group__addon--button"
          >
            
                        
            <button
              aria-controls="F4GcX348"
              aria-expanded="true"
              aria-haspopup="true"
              aria-label="show/hide fruit options"
              class="fd-input-group__button fd-button fd-button--transparent"
            >
              
                            
              <i
                class="sap-icon--navigation-down-arrow"
              />
              
                        
            </button>
            
                    
          </span>
          
                
        </div>
        
            
      </div>
      
            
      <div
        aria-hidden="false"
        class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
        id="F4GcX348"
      >
        
                
        <div
          class="fd-popover__wrapper docs-max-height"
        >
          
                    
          <ul
            aria-label="fruit options"
            class="fd-list fd-list--dropdown"
            role="listbox"
          >
            
                        
            <li
              class="fd-list__item is-selected"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                
                                
                <span
                  class="fd-list__bold"
                >
                  App
                </span>
                le
                            
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Orange
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Banana
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Kiwi
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Nectarine
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Apricots
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Peache
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Plum
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Mango
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Strawberry
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Blueberry
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Watermelon
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Rockmelon
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Honeydew
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Apple
              </span>
              
                        
            </li>
            
                    
          </ul>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
    
  <div
    style="display:flex;flex-direction:column"
  >
    
        
    <label
      class="fd-form-label"
      for="compactCombobox"
    >
      Combobox Compact Mode
    </label>
    
        
    <div
      class="fd-popover"
    >
      
            
      <div
        aria-controls="F4GcX34"
        aria-expanded="false"
        aria-haspopup="true"
        class="fd-popover__control"
      >
        
                
        <div
          class="fd-input-group fd-input-group--control"
        >
          
                    
          <input
            class="fd-input fd-input--compact fd-input-group__input"
            id="compactCombobox"
            placeholder="Select Fruit"
            type="text"
          />
          
                    
          <span
            class="fd-input-group__addon fd-input-group__addon--compact fd-input-group__addon--button"
          >
            
                        
            <button
              aria-controls="F4GcX34"
              aria-expanded="true"
              aria-haspopup="true"
              aria-label="show/hide fruit options"
              class="fd-input-group__button fd-button fd-button--compact fd-button--transparent fd-select__button"
            >
              
                            
              <i
                class="sap-icon--navigation-down-arrow"
              />
              
                        
            </button>
            
                    
          </span>
          
                
        </div>
        
            
      </div>
      
            
      <div
        aria-hidden="false"
        class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
        id="F4GcX34"
      >
        
                
        <div
          class="fd-popover__wrapper"
        >
          
                    
          <ul
            aria-label="fruit options"
            class="fd-list fd-list--dropdown fd-list--compact"
            role="listbox"
          >
            
                        
            <li
              class="fd-list__item is-selected"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                
                                
                <span
                  class="fd-list__bold"
                >
                  App
                </span>
                le
                            
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Orange
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Banana
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Kiwi
              </span>
              
                        
            </li>
            
                    
          </ul>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Patterns/Combobox Input Disabled And Read Only 1`] = `
<div
  style="display:flex;justify-content:space-around"
>
  
    
  <div
    style="display:flex;flex-direction:column"
  >
    
        
    <label
      class="fd-form-label"
      for="disabledCombobox"
    >
      Disabled
    </label>
    
        
    <div
      class="fd-popover"
    >
      
            
      <div
        aria-controls="F4GcX348"
        aria-disabled="true"
        aria-expanded="false"
        aria-haspopup="true"
        class="fd-popover__control"
        disabled=""
      >
        
                
        <div
          aria-disabled="true"
          class="fd-input-group fd-input-group--control"
          disabled=""
        >
          
                    
          <input
            class="fd-input fd-input-group__input"
            id="disabledCombobox"
            placeholder="Select Fruit"
            type="text"
            value="Orange"
          />
          
                    
          <span
            class="fd-input-group__addon fd-input-group__addon--button"
          >
            
                        
            <button
              aria-label="show/hide options button"
              class="fd-input-group__button fd-button fd-button--transparent fd-select__button"
            >
              
                            
              <i
                class="sap-icon--navigation-down-arrow"
              />
              
                        
            </button>
            
                    
          </span>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
    
  <div
    style="display:flex;flex-direction:column"
  >
    
        
    <label
      class="fd-form-label"
      for="readonlyCombobox"
    >
      Readonly
    </label>
    
        
    <div
      class="fd-popover"
    >
      
            
      <div
        aria-controls="F4GcX348"
        aria-expanded="false"
        aria-haspopup="false"
        aria-readonly="true"
        class="fd-popover__control"
        readonly=""
      >
        
                
        <input
          aria-readonly="true"
          class="fd-input fd-input-group__input"
          id="readonlyCombobox"
          readonly=""
          type="text"
          value="Orange"
        />
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Patterns/Combobox Input Match Popover Body Size 1`] = `
<div
  style="height:250px"
>
  
    
  <div
    style="display:flex;flex-direction:column"
  >
    
        
    <label
      class="fd-form-label"
      for="matchPopoverBodySize"
    >
      Match Popover Body Size
    </label>
    
        
    <div
      class="fd-popover"
    >
      
            
      <div
        aria-controls="F4HTFDLK6"
        aria-expanded="false"
        aria-haspopup="true"
        class="fd-popover__control"
      >
        
                
        <div
          class="fd-input-group fd-input-group--control"
        >
          
                    
          <input
            class="fd-input fd-input-group__input"
            id="matchPopoverBodySize"
            placeholder="Select Ingredient"
            type="text"
          />
          
                    
          <span
            class="fd-input-group__addon fd-input-group__addon--button"
          >
            
                        
            <button
              aria-controls="F4HTFDLK6"
              aria-expanded="true"
              aria-haspopup="true"
              aria-label="show/hide fruit options"
              class="fd-input-group__button fd-button fd-button--transparent"
            >
              
                            
              <i
                class="sap-icon--navigation-down-arrow"
              />
              
                        
            </button>
            
                    
          </span>
          
                
        </div>
        
            
      </div>
      
            
      <div
        aria-hidden="false"
        class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
        id="F4HTFDLK6"
      >
        
                
        <div
          class="fd-popover__wrapper"
        >
          
                    
          <ul
            aria-label="fruit options"
            class="fd-list fd-list--dropdown"
            role="listbox"
          >
            
                        
            <li
              class="fd-list__item is-selected"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Apple
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Orange
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Banana
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Kiwi
              </span>
              
                        
            </li>
            
                    
          </ul>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Patterns/Combobox Input Mobile 1`] = `
<div
  class="fd-dialog fd-dialog-docs-static fd-select-docs-max-height fd-dialog--active"
  id="select-dialog-example"
  style="height:600px"
>
  
    
  <section
    aria-labelledby="mobileDialogHeader"
    class="fd-dialog__content"
    role="dialog"
  >
    
        
    <header
      class="fd-dialog__header fd-bar fd-bar--header-with-subheader"
    >
      
            
      <div
        class="fd-bar__left"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <h3
            class="fd-title fd-title--h5"
            id="mobileDialogHeader"
          >
            
                        Ingredients
                    
          </h3>
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-bar__right"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            aria-label="close"
            class="fd-button fd-button--transparent"
          >
            
                        
            <i
              class="sap-icon--decline"
            />
            
                    
          </button>
          
                
        </div>
        
            
      </div>
      
        
    </header>
    
        
    <div
      class="fd-dialog__subheader fd-bar fd-bar--cozy fd-bar--subheader"
    >
      
            
      <div
        class="fd-bar__middle"
      >
        
                
        <div
          class="fd-input-group fd-input-group--control"
        >
          
                     
          <input
            aria-labelledby="mobileDialogHeader"
            class="fd-input fd-input-group__input"
            id="mobileCombobox"
            placeholder="Select Ingredient"
            type="text"
            value="Apple"
          />
          
                     
          <span
            class="fd-input-group__addon fd-input-group__addon--button"
          >
            
                         
            <button
              aria-label="hide/show options"
              class="fd-input-group__button fd-button fd-button--transparent"
            >
              
                                
              <i
                class="sap-icon--navigation-down-arrow"
              />
              
                            
            </button>
            
                     
          </span>
          
                 
        </div>
        
            
      </div>
      
        
    </div>
    
        
    <div
      class="fd-dialog__body fd-dialog__body--no-vertical-padding"
    >
      
            
      <label
        class="fd-list__group-header"
        id="fruitsMobileHeader"
      >
        Fruits
      </label>
      
            
      <ul
        aria-labelledby="fruitsMobileHeader"
        class="fd-list fd-list--dropdown"
        role="listbox"
      >
        
                
        <li
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
                    
          <span
            class="fd-list__title"
          >
            Apple
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="0"
        >
          
                    
          <span
            class="fd-list__title"
          >
            Orange
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="0"
        >
          
                    
          <span
            class="fd-list__title"
          >
            Banana
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="0"
        >
          
                    
          <span
            class="fd-list__title"
          >
            Kiwi
          </span>
          
                
        </li>
        
            
      </ul>
      
            
      <label
        class="fd-list__group-header"
        id="vegMobileHeader"
      >
        Vegetables
      </label>
      
            
      <ul
        aria-labelledby="vegMobileHeader"
        class="fd-list fd-list--dropdown"
        role="listbox"
      >
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="0"
        >
          
                    
          <span
            class="fd-list__title"
          >
            Tomato
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="0"
        >
          
                    
          <span
            class="fd-list__title"
          >
            Onion
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="0"
        >
          
                    
          <span
            class="fd-list__title"
          >
            Spinach
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="0"
        >
          
                    
          <span
            class="fd-list__title"
          >
            Potato
          </span>
          
                
        </li>
        
            
      </ul>
      
        
    </div>
    
       
    <footer
      class="fd-dialog__footer fd-bar fd-bar--cozy fd-bar--footer"
    >
      
            
      <div
        class="fd-bar__right"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            class="fd-button fd-button--emphasized fd-dialog__decisive-button"
          >
            OK
          </button>
          
                
        </div>
        
            
      </div>
      
        
    </footer>
    
    
  </section>
  

</div>
`;

exports[`Storyshots Patterns/Combobox Input Semantic 1`] = `
<div
  style="height:200px"
>
  
    
  <label
    class="fd-form-label"
    for="semanticCombobox"
  >
    Semantic Combobox
  </label>
  
    
  <div
    class="fd-popover"
  >
    
        
    <div
      aria-controls="F4GcEX34"
      aria-expanded="false"
      aria-haspopup="true"
      class="fd-popover__control"
    >
      
            
      <div
        class="fd-input-group fd-input-group--control is-success"
      >
        
                
        <input
          class="fd-input fd-input--compact fd-input-group__input"
          id="semanticCombobox"
          placeholder="Select Fruit"
          type="text"
        />
        
                
        <span
          class="fd-input-group__addon fd-input-group__addon--compact fd-input-group__addon--button"
        >
          
                    
          <button
            aria-controls="F4GcEX34"
            aria-expanded="true"
            aria-haspopup="true"
            aria-label="show/hide fruit options"
            class="fd-input-group__button fd-button fd-button--compact fd-button--transparent fd-select__button"
          >
            
                        
            <i
              class="sap-icon--navigation-down-arrow"
            />
            
                    
          </button>
          
                
        </span>
        
            
      </div>
      
        
    </div>
    
        
    <div
      aria-hidden="false"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
      id="F4GcEX34"
    >
      
            
      <div
        class="fd-popover__wrapper"
      >
        
                
        <span
          class="fd-list__message fd-list__message--success"
        >
          Success message
        </span>
        
                
        <ul
          aria-label="fruit options"
          class="fd-list fd-list--has-message fd-list--dropdown fd-list--compact"
          role="listbox"
        >
          
                    
          <li
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
                        
            <span
              class="fd-list__title"
            >
              
                            
              <span
                class="fd-list__bold"
              >
                App
              </span>
              le
                        
            </span>
            
                    
          </li>
          
                    
          <li
            class="fd-list__item"
            role="option"
            tabindex="0"
          >
            
                        
            <span
              class="fd-list__title"
            >
              Orange
            </span>
            
                    
          </li>
          
                    
          <li
            class="fd-list__item"
            role="option"
            tabindex="0"
          >
            
                        
            <span
              class="fd-list__title"
            >
              Banana
            </span>
            
                    
          </li>
          
                    
          <li
            class="fd-list__item"
            role="option"
            tabindex="0"
          >
            
                        
            <span
              class="fd-list__title"
            >
              Kiwi
            </span>
            
                    
          </li>
          
                
        </ul>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Patterns/Combobox Input Two Items And Items Grouping 1`] = `
<div
  style="display:flex;justify-content:space-around;height:700px"
>
  
    
  <div
    style="display:flex;flex-direction:column"
  >
    
        
    <label
      class="fd-form-label"
      for="twoItems"
    >
      Product prices
    </label>
    
        
    <div
      class="fd-popover"
    >
      
            
      <div
        aria-controls="F4GRTGLK6"
        aria-expanded="false"
        aria-haspopup="true"
        class="fd-popover__control"
      >
        
                
        <div
          class="fd-input-group fd-input-group--control"
        >
          
                    
          <input
            class="fd-input fd-input-group__input"
            id="twoItems"
            placeholder="Select Product"
            type="text"
          />
          
                    
          <span
            class="fd-input-group__addon fd-input-group__addon--button"
          >
            
                        
            <button
              aria-controls="F4GRTGLK6"
              aria-expanded="true"
              aria-haspopup="true"
              aria-label="show/hide fruit options"
              class="fd-input-group__button fd-button fd-button--transparent fd-select__button"
            >
              
                            
              <i
                class="sap-icon--navigation-down-arrow"
              />
              
                        
            </button>
            
                    
          </span>
          
                
        </div>
        
            
      </div>
      
            
      <div
        aria-hidden="false"
        class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
        id="F4GRTGLK6"
      >
        
                
        <div
          class="fd-popover__wrapper"
        >
          
                    
          <ul
            aria-label="fruit options"
            class="fd-list fd-list--dropdown"
            role="listbox"
          >
            
                    
            <li
              class="fd-list__item is-selected"
              role="option"
              tabindex="0"
            >
              
                        
              <span
                class="fd-list__title"
              >
                Product 1
              </span>
              
                        
              <span
                class="fd-list__secondary"
              >
                1000 EUR
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                        
              <span
                class="fd-list__title"
              >
                Product 2
              </span>
              
                        
              <span
                class="fd-list__secondary"
              >
                750 EUR
              </span>
              
                    
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                        
              <span
                class="fd-list__title"
              >
                Product 3
              </span>
              
                        
              <span
                class="fd-list__secondary"
              >
                780 EUR
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                        
              <span
                class="fd-list__title"
              >
                Product 4
              </span>
              
                        
              <span
                class="fd-list__secondary"
              >
                40 EUR
              </span>
              
                        
            </li>
            
                    
          </ul>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
    
  <div
    style="display:flex;flex-direction:column"
  >
    
        
    <label
      class="fd-form-label"
      for="groupedItems"
    >
      Fruits and Vegetables
    </label>
    
        
    <div
      class="fd-popover"
    >
      
            
      <div
        aria-controls="F4GcXLK6"
        aria-expanded="true"
        aria-haspopup="true"
        class="fd-popover__control"
      >
        
                
        <div
          class="fd-input-group fd-input-group--control"
        >
          
                    
          <input
            class="fd-input fd-input-group__input"
            id="groupedItems"
            placeholder="Select Ingredient"
            type="text"
          />
          
                    
          <span
            class="fd-input-group__addon fd-input-group__addon--button"
          >
            
                        
            <button
              aria-controls="F4GcXLK6"
              aria-expanded="true"
              aria-haspopup="true"
              aria-label="show/hide fruit options"
              class="fd-input-group__button fd-button fd-button--transparent"
            >
              
                            
              <i
                class="sap-icon--navigation-down-arrow"
              />
              
                        
            </button>
            
                    
          </span>
          
                
        </div>
        
            
      </div>
      
            
      <div
        aria-hidden="false"
        class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
        id="F4GcXLK6"
      >
        
                
        <div
          class="fd-popover__wrapper"
        >
          
                    
          <label
            class="fd-list__group-header"
            id="fruitListHeader"
          >
            
                        Fruits
                    
          </label>
          
                    
          <ul
            aria-labelledby="fruitListHeader"
            class="fd-list fd-list--dropdown"
            role="listbox"
          >
            
                        
            <li
              class="fd-list__item is-selected"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Apple
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Orange
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Banana
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Kiwi
              </span>
              
                        
            </li>
            
                    
          </ul>
          
                    
          <label
            class="fd-list__group-header"
            id="vegListHeader"
          >
            
                        Vegetables
                    
          </label>
          
                    
          <ul
            aria-labelledby="vegListHeader"
            class="fd-list fd-list--dropdown"
            role="listbox"
          >
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Tomato
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Onion
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Spinach
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                Potato
              </span>
              
                        
            </li>
            
                    
          </ul>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;
